# eBPF_Visualization/eBPF_server/api/v1/ebpfplugins/ebpfplugins.go
@@ -158,7 +158,7 @@ func (e *EbpfPluginsApi) LoadEbpfPlugins(c *gin.Context) {
 		response.FailWithMessage(err.Error(), c)
 		return
 	}
-	if err := ebpfService.LoadEbpfPlugins(pluginInfo); err != nil {
+	if err := ebpfService.LoadEbpfPlugins(pluginInfo, []string{}); err != nil {
 		global.GVA_LOG.Error("加载失败!", zap.Error(err))
 		response.FailWithMessage("加载失败", c)
 	} else {
@@ -240,6 +240,13 @@ func (e *EbpfPluginsApi) GetRunningEbpfPluginList(c *gin.Context) {
 	}
 }
 
+// @Tags EbpfPlugins
+// @Summary 获取单个ebpf程序的数据
+// @Security ApiKeyAuth
+// @accept application/json
+// @Produce application/json
+// @Success 200 {string} string "{"success":true,"data":{},"msg":"获取成功"}"
+// @Router /ebpf/ebpfdata/:id [get]
 func (e *EbpfPluginsApi) GetSinglePluginData(c *gin.Context) {
 	var id int
 	id_str := c.Param("id")
@@ -251,7 +258,42 @@ func (e *EbpfPluginsApi) GetSinglePluginData(c *gin.Context) {
 		response.FailWithMessage("获取失败"+err.Error(), c)
 	} else {
 		response.OkWithDetailed(response.PageResult{
-			List: singleplugindata,
+			List:     singleplugindata,
+			Total:    int64(len(singleplugindata)),
+			Page:     1,
+			PageSize: 1,
 		}, "获取成功", c)
+	}
+}
+
+// @Tags EbpfPlugins
+// @Summary 批量加载ebpf程序
+// @Security ApiKeyAuth
+// @accept application/json
+// @Produce application/json
+// @Success 200 {string} string "{"success":true,"data":{},"msg":"获取成功"}"
+// @Router /ebpf/batchloadebpf [post]
+func (e *EbpfPluginsApi) BatchLoadEbpfplugins(c *gin.Context) {
+	jsondata := make(map[string][]string)
+	err := c.BindJSON(&jsondata)
+	if err != nil {
+		global.GVA_LOG.Error("json数据解析失败", zap.Error(err))
+		response.FailWithMessage("json数据解释失败"+err.Error(), c)
+	} else {
+		for ebpfplugin, parameter := range jsondata {
+			var e request.PluginInfo
+			db := global.GVA_DB.Model(&ebpfplugins.EbpfPlugins{})
+			var plugin ebpfplugins.EbpfPlugins
+			db.Where("plugin_name=?", ebpfplugin).First(&plugin)
+			e.PluginId = int(plugin.ID)
+			err = ebpfService.LoadEbpfPlugins(e, parameter)
+			if err != nil {
+				global.GVA_LOG.Error("加载失败", zap.Error(err))
+				response.FailWithMessage("加载失败"+err.Error(), c)
+				continue
+			} else {
+				response.OkWithMessage("加载成功", c)
+			}
+		}
 	}
 }
